src/test/ui/generic-associated-types/issue-79422.stderr
error[E0107]: missing generics for associated type `MapLike::VRefCont`
  --> $DIR/issue-79422.rs:42:36
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont = dyn RefCont<'_, u8>>>;
   |                                    ^^^^^^^^ expected 1 lifetime argument
   |
note: associated type defined here, with 1 lifetime parameter: `'a`
  --> $DIR/issue-79422.rs:20:10
   |
LL |     type VRefCont<'a>: RefCont<'a, V>;
   |          ^^^^^^^^ --
help: add missing lifetime argument
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont<'a> = dyn RefCont<'_, u8>>>;
   |                                    ~~~~~~~~~~~~

error[E0038]: the trait `MapLike` cannot be made into an object
  --> $DIR/issue-79422.rs:42:12
   |
LL |         as Box<dyn MapLike<u8, u8, VRefCont = dyn RefCont<'_, u8>>>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MapLike` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-79422.rs:20:10
   |
LL | trait MapLike<K, V> {
   |       ------- this trait cannot be made into an object...
LL |     type VRefCont<'a>: RefCont<'a, V>;
   |          ^^^^^^^^ ...because it contains the generic associated type `VRefCont`
   = help: consider moving `VRefCont` to another trait

error[E0038]: the trait `MapLike` cannot be made into an object
  --> $DIR/issue-79422.rs:41:13
   |
LL |     let m = Box::new(std::collections::BTreeMap::<u8, u8>::new())
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `MapLike` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-79422.rs:20:10
   |
LL | trait MapLike<K, V> {
   |       ------- this trait cannot be made into an object...
LL |     type VRefCont<'a>: RefCont<'a, V>;
   |          ^^^^^^^^ ...because it contains the generic associated type `VRefCont`
   = help: consider moving `VRefCont` to another trait
   = note: required because of the requirements on the impl of `CoerceUnsized<Box<dyn MapLike<u8, u8, VRefCont = (dyn RefCont<'_, u8> + 'static)>>>` for `Box<BTreeMap<u8, u8>>`
   = note: required by cast to type `Box<dyn MapLike<u8, u8, VRefCont = (dyn RefCont<'_, u8> + 'static)>>`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0038, E0107.
For more information about an error, try `rustc --explain E0038`.
